--- a/genindex.html
+++ b/genindex.html
@@ -201,418 +201,8 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a></div>
+  <div class="genindex-jumpbox"></div>
 </section>
-<section id="A" class="genindex-section">
-  <h2>A</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.user.html#nbox.user.Secrets.add_ocd">add_ocd() (nbox.user.Secrets method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="B" class="genindex-section">
-  <h2>B</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser">BaseParser (class in nbox.parsers)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="C" class="genindex-section">
-  <h2>C</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.Console">Console (class in nbox.utils)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.convert_to_list">convert_to_list() (in module nbox.utils)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.create_secret_file">create_secret_file() (in module nbox.user)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="D" class="genindex-section">
-  <h2>D</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.cli.html#nbox.cli.deploy">deploy() (in module nbox.cli)</a>
-
-        <ul>
-          <li><a href="nbox.model.html#nbox.model.Model.deploy">(nbox.model.Model method)</a>
-</li>
-        </ul></li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="E" class="genindex-section">
-  <h2>E</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.model.html#nbox.model.Model.eval">eval() (nbox.model.Model method)</a>
-</li>
-        <li><a href="nbox.model.html#nbox.model.Model.export">export() (nbox.model.Model method)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_onnx">export_to_onnx() (in module nbox.framework.pytorch)</a>
-
-        <ul>
-          <li><a href="nbox.framework.sklearn.html#nbox.framework.sklearn.export_to_onnx">(in module nbox.framework.sklearn)</a>
-</li>
-        </ul></li>
-        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_torchscript">export_to_torchscript() (in module nbox.framework.pytorch)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="F" class="genindex-section">
-  <h2>F</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.fetch">fetch() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.model.html#nbox.model.Model.fetch_meta_from_nbx_cloud">fetch_meta_from_nbx_cloud() (nbox.model.Model method)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.folder">folder() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="G" class="genindex-section">
-  <h2>G</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.user.html#nbox.user.Secrets.get">get() (nbox.user.Secrets method)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.get_access_token">get_access_token() (in module nbox.user)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.framework.html#nbox.framework.get_meta">get_meta() (in module nbox.framework)</a>
-</li>
-        <li><a href="nbox.model.html#nbox.model.Model.get_nbox_meta">get_nbox_meta() (nbox.model.Model method)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.Secrets.get_ocd">get_ocd() (nbox.user.Secrets method)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.get_random_name">get_random_name() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="H" class="genindex-section">
-  <h2>H</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.hash_">hash_() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="I" class="genindex-section">
-  <h2>I</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser">ImageParser (class in nbox.parsers)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.info">info() (in module nbox.utils)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.isthere">isthere() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="J" class="genindex-section">
-  <h2>J</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.join">join() (in module nbox.utils)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="L" class="genindex-section">
-  <h2>L</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.load.html#nbox.load.load">load() (in module nbox.load)</a>
-</li>
-        <li><a href="nbox.load.html#nbox.load.load_efficientnet_pytorch_models">load_efficientnet_pytorch_models() (in module nbox.load)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.load.html#nbox.load.load_torchvision_models">load_torchvision_models() (in module nbox.load)</a>
-</li>
-        <li><a href="nbox.load.html#nbox.load.load_transformers_models">load_transformers_models() (in module nbox.load)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="M" class="genindex-section">
-  <h2>M</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.model.html#nbox.model.Model">Model (class in nbox.model)</a>
-</li>
-        <li>
-    module
-
-        <ul>
-          <li><a href="nbox.html#module-nbox">nbox</a>
-</li>
-          <li><a href="nbox.cli.html#module-nbox.cli">nbox.cli</a>
-</li>
-          <li><a href="nbox.framework.html#module-nbox.framework">nbox.framework</a>
-</li>
-          <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">nbox.framework.pytorch</a>
-</li>
-          <li><a href="nbox.framework.sklearn.html#module-nbox.framework.sklearn">nbox.framework.sklearn</a>
-</li>
-          <li><a href="nbox.load.html#module-nbox.load">nbox.load</a>
-</li>
-          <li><a href="nbox.model.html#module-nbox.model">nbox.model</a>
-</li>
-          <li><a href="nbox.network.html#module-nbox.network">nbox.network</a>
-</li>
-          <li><a href="nbox.parsers.html#module-nbox.parsers">nbox.parsers</a>
-</li>
-          <li><a href="nbox.user.html#module-nbox.user">nbox.user</a>
-</li>
-          <li><a href="nbox.utils.html#module-nbox.utils">nbox.utils</a>
-</li>
-        </ul></li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="N" class="genindex-section">
-  <h2>N</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li>
-    nbox
-
-        <ul>
-          <li><a href="nbox.html#module-nbox">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.cli
-
-        <ul>
-          <li><a href="nbox.cli.html#module-nbox.cli">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.framework
-
-        <ul>
-          <li><a href="nbox.framework.html#module-nbox.framework">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.framework.pytorch
-
-        <ul>
-          <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.framework.sklearn
-
-        <ul>
-          <li><a href="nbox.framework.sklearn.html#module-nbox.framework.sklearn">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.load
-
-        <ul>
-          <li><a href="nbox.load.html#module-nbox.load">module</a>
-</li>
-        </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li>
-    nbox.model
-
-        <ul>
-          <li><a href="nbox.model.html#module-nbox.model">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.network
-
-        <ul>
-          <li><a href="nbox.network.html#module-nbox.network">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.parsers
-
-        <ul>
-          <li><a href="nbox.parsers.html#module-nbox.parsers">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.user
-
-        <ul>
-          <li><a href="nbox.user.html#module-nbox.user">module</a>
-</li>
-        </ul></li>
-        <li>
-    nbox.utils
-
-        <ul>
-          <li><a href="nbox.utils.html#module-nbox.utils">module</a>
-</li>
-        </ul></li>
-        <li><a href="nbox.network.html#nbox.network.NBXAPIError">NBXAPIError</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="O" class="genindex-section">
-  <h2>O</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.network.html#nbox.network.one_click_deploy">one_click_deploy() (in module nbox.network)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="P" class="genindex-section">
-  <h2>P</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.load.html#nbox.load.plug">plug() (in module nbox.load)</a>
-</li>
-        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_dict">process_dict() (nbox.parsers.BaseParser method)</a>
-
-        <ul>
-          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_dict">(nbox.parsers.ImageParser method)</a>
-</li>
-          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_dict">(nbox.parsers.TextParser method)</a>
-</li>
-        </ul></li>
-        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_list">process_list() (nbox.parsers.BaseParser method)</a>
-
-        <ul>
-          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_list">(nbox.parsers.ImageParser method)</a>
-</li>
-          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_list">(nbox.parsers.TextParser method)</a>
-</li>
-        </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_primitive">process_primitive() (nbox.parsers.BaseParser method)</a>
-
-        <ul>
-          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_primitive">(nbox.parsers.ImageParser method)</a>
-</li>
-          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_primitive">(nbox.parsers.TextParser method)</a>
-</li>
-        </ul></li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="R" class="genindex-section">
-  <h2>R</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rearrange">rearrange() (nbox.parsers.ImageParser method)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.reinit_secret">reinit_secret() (in module nbox.user)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.load.html#nbox.load.remove_kwargs">remove_kwargs() (in module nbox.load)</a>
-</li>
-        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rescale">rescale() (nbox.parsers.ImageParser method)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.Console.rule">rule() (nbox.utils.Console method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="S" class="genindex-section">
-  <h2>S</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.user.html#nbox.user.Secrets.save">save() (nbox.user.Secrets method)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.Secrets">Secrets (class in nbox.user)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.Console.sleep">sleep() (nbox.utils.Console method)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.Console.start">start() (nbox.utils.Console method)</a>
-</li>
-        <li><a href="nbox.utils.html#nbox.utils.Console.stop">stop() (nbox.utils.Console method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="T" class="genindex-section">
-  <h2>T</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.Console.T">T (nbox.utils.Console attribute)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.parsers.html#nbox.parsers.TextParser">TextParser (class in nbox.parsers)</a>
-</li>
-        <li><a href="nbox.model.html#nbox.model.Model.train">train() (nbox.model.Model method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="U" class="genindex-section">
-  <h2>U</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.user.html#nbox.user.Secrets.update_access_token">update_access_token() (nbox.user.Secrets method)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.user.html#nbox.user.Secrets.update_ocd">update_ocd() (nbox.user.Secrets method)</a>
-</li>
-        <li><a href="nbox.user.html#nbox.user.Secrets.update_username">update_username() (nbox.user.Secrets method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
 
         </article>
       </div>
