--- a/genindex.html
+++ b/genindex.html
@@ -201,8 +201,238 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"></div>
+  <div class="genindex-jumpbox"><a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
 </section>
+<section id="B" class="genindex-section">
+  <h2>B</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser">BaseParser (class in nbox.parsers)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="C" class="genindex-section">
+  <h2>C</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.Console">Console (class in nbox.utils)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.convert_to_list">convert_to_list() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="F" class="genindex-section">
+  <h2>F</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.fetch">fetch() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.folder">folder() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="G" class="genindex-section">
+  <h2>G</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.get_random_name">get_random_name() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="H" class="genindex-section">
+  <h2>H</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.hash_">hash_() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="I" class="genindex-section">
+  <h2>I</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser">ImageParser (class in nbox.parsers)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.info">info() (in module nbox.utils)</a>
+</li>
+        <li><a href="nbox.utils.html#nbox.utils.isthere">isthere() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="J" class="genindex-section">
+  <h2>J</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.join">join() (in module nbox.utils)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="M" class="genindex-section">
+  <h2>M</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    module
+
+        <ul>
+          <li><a href="nbox.network.html#module-nbox.network">nbox.network</a>
+</li>
+          <li><a href="nbox.parsers.html#module-nbox.parsers">nbox.parsers</a>
+</li>
+          <li><a href="nbox.utils.html#module-nbox.utils">nbox.utils</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="N" class="genindex-section">
+  <h2>N</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    nbox.network
+
+        <ul>
+          <li><a href="nbox.network.html#module-nbox.network">module</a>
+</li>
+        </ul></li>
+        <li>
+    nbox.parsers
+
+        <ul>
+          <li><a href="nbox.parsers.html#module-nbox.parsers">module</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    nbox.utils
+
+        <ul>
+          <li><a href="nbox.utils.html#module-nbox.utils">module</a>
+</li>
+        </ul></li>
+        <li><a href="nbox.network.html#nbox.network.NBXAPIError">NBXAPIError</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="O" class="genindex-section">
+  <h2>O</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.network.html#nbox.network.one_click_deploy">one_click_deploy() (in module nbox.network)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="P" class="genindex-section">
+  <h2>P</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_dict">process_dict() (nbox.parsers.BaseParser method)</a>
+
+        <ul>
+          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_dict">(nbox.parsers.ImageParser method)</a>
+</li>
+          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_dict">(nbox.parsers.TextParser method)</a>
+</li>
+        </ul></li>
+        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_list">process_list() (nbox.parsers.BaseParser method)</a>
+
+        <ul>
+          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_list">(nbox.parsers.ImageParser method)</a>
+</li>
+          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_list">(nbox.parsers.TextParser method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_primitive">process_primitive() (nbox.parsers.BaseParser method)</a>
+
+        <ul>
+          <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.process_primitive">(nbox.parsers.ImageParser method)</a>
+</li>
+          <li><a href="nbox.parsers.html#nbox.parsers.TextParser.process_primitive">(nbox.parsers.TextParser method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="R" class="genindex-section">
+  <h2>R</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rearrange">rearrange() (nbox.parsers.ImageParser method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rescale">rescale() (nbox.parsers.ImageParser method)</a>
+</li>
+        <li><a href="nbox.utils.html#nbox.utils.Console.rule">rule() (nbox.utils.Console method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="S" class="genindex-section">
+  <h2>S</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.Console.sleep">sleep() (nbox.utils.Console method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.Console.start">start() (nbox.utils.Console method)</a>
+</li>
+        <li><a href="nbox.utils.html#nbox.utils.Console.stop">stop() (nbox.utils.Console method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="T" class="genindex-section">
+  <h2>T</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.Console.T">T (nbox.utils.Console attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.parsers.html#nbox.parsers.TextParser">TextParser (class in nbox.parsers)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
 
         </article>
       </div>
