--- a/genindex.html
+++ b/genindex.html
@@ -201,8 +201,18 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a></div>
 </section>
+<section id="A" class="genindex-section">
+  <h2>A</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.user.html#nbox.user.Secrets.add_ocd">add_ocd() (nbox.user.Secrets method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="B" class="genindex-section">
   <h2>B</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
@@ -222,6 +232,22 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nbox.utils.html#nbox.utils.convert_to_list">convert_to_list() (in module nbox.utils)</a>
+</li>
+        <li><a href="nbox.user.html#nbox.user.create_secret_file">create_secret_file() (in module nbox.user)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="E" class="genindex-section">
+  <h2>E</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_onnx">export_to_onnx() (in module nbox.framework.pytorch)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_torchscript">export_to_torchscript() (in module nbox.framework.pytorch)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -245,10 +271,16 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
+        <li><a href="nbox.user.html#nbox.user.Secrets.get">get() (nbox.user.Secrets method)</a>
+</li>
+        <li><a href="nbox.user.html#nbox.user.get_access_token">get_access_token() (in module nbox.user)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
+</li>
+        <li><a href="nbox.user.html#nbox.user.Secrets.get_ocd">get_ocd() (nbox.user.Secrets method)</a>
+</li>
         <li><a href="nbox.utils.html#nbox.utils.get_random_name">get_random_name() (in module nbox.utils)</a>
 </li>
     </ul></td>
@@ -299,9 +331,13 @@
     module
 
         <ul>
+          <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">nbox.framework.pytorch</a>
+</li>
           <li><a href="nbox.network.html#module-nbox.network">nbox.network</a>
 </li>
           <li><a href="nbox.parsers.html#module-nbox.parsers">nbox.parsers</a>
+</li>
+          <li><a href="nbox.user.html#module-nbox.user">nbox.user</a>
 </li>
           <li><a href="nbox.utils.html#module-nbox.utils">nbox.utils</a>
 </li>
@@ -314,6 +350,13 @@
   <h2>N</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    nbox.framework.pytorch
+
+        <ul>
+          <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">module</a>
+</li>
+        </ul></li>
         <li>
     nbox.network
 
@@ -330,6 +373,13 @@
         </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    nbox.user
+
+        <ul>
+          <li><a href="nbox.user.html#module-nbox.user">module</a>
+</li>
+        </ul></li>
         <li>
     nbox.utils
 
@@ -393,6 +443,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rearrange">rearrange() (nbox.parsers.ImageParser method)</a>
 </li>
+        <li><a href="nbox.user.html#nbox.user.reinit_secret">reinit_secret() (in module nbox.user)</a>
+</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rescale">rescale() (nbox.parsers.ImageParser method)</a>
@@ -407,10 +459,14 @@
   <h2>S</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.Console.sleep">sleep() (nbox.utils.Console method)</a>
+        <li><a href="nbox.user.html#nbox.user.Secrets.save">save() (nbox.user.Secrets method)</a>
+</li>
+        <li><a href="nbox.user.html#nbox.user.Secrets">Secrets (class in nbox.user)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.utils.html#nbox.utils.Console.sleep">sleep() (nbox.utils.Console method)</a>
+</li>
         <li><a href="nbox.utils.html#nbox.utils.Console.start">start() (nbox.utils.Console method)</a>
 </li>
         <li><a href="nbox.utils.html#nbox.utils.Console.stop">stop() (nbox.utils.Console method)</a>
@@ -428,6 +484,22 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nbox.parsers.html#nbox.parsers.TextParser">TextParser (class in nbox.parsers)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="U" class="genindex-section">
+  <h2>U</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.user.html#nbox.user.Secrets.update_access_token">update_access_token() (nbox.user.Secrets method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.user.html#nbox.user.Secrets.update_ocd">update_ocd() (nbox.user.Secrets method)</a>
+</li>
+        <li><a href="nbox.user.html#nbox.user.Secrets.update_username">update_username() (nbox.user.Secrets method)</a>
 </li>
     </ul></td>
   </tr></table>
