--- a/genindex.html
+++ b/genindex.html
@@ -201,7 +201,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a></div>
 </section>
 <section id="A" class="genindex-section">
   <h2>A</h2>
@@ -239,14 +239,36 @@
   </tr></table>
 </section>
 
+<section id="D" class="genindex-section">
+  <h2>D</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.cli.html#nbox.cli.deploy">deploy() (in module nbox.cli)</a>
+
+        <ul>
+          <li><a href="nbox.model.html#nbox.model.Model.deploy">(nbox.model.Model method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="E" class="genindex-section">
   <h2>E</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_onnx">export_to_onnx() (in module nbox.framework.pytorch)</a>
+        <li><a href="nbox.model.html#nbox.model.Model.eval">eval() (nbox.model.Model method)</a>
+</li>
+        <li><a href="nbox.model.html#nbox.model.Model.export">export() (nbox.model.Model method)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_onnx">export_to_onnx() (in module nbox.framework.pytorch)</a>
+
+        <ul>
+          <li><a href="nbox.framework.sklearn.html#nbox.framework.sklearn.export_to_onnx">(in module nbox.framework.sklearn)</a>
+</li>
+        </ul></li>
         <li><a href="nbox.framework.pytorch.html#nbox.framework.pytorch.export_to_torchscript">export_to_torchscript() (in module nbox.framework.pytorch)</a>
 </li>
     </ul></td>
@@ -261,6 +283,8 @@
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.model.html#nbox.model.Model.fetch_meta_from_nbx_cloud">fetch_meta_from_nbx_cloud() (nbox.model.Model method)</a>
+</li>
         <li><a href="nbox.utils.html#nbox.utils.folder">folder() (in module nbox.utils)</a>
 </li>
     </ul></td>
@@ -275,9 +299,13 @@
 </li>
         <li><a href="nbox.user.html#nbox.user.get_access_token">get_access_token() (in module nbox.user)</a>
 </li>
+        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
+</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="nbox.utils.html#nbox.utils.get_image">get_image() (in module nbox.utils)</a>
+        <li><a href="nbox.framework.html#nbox.framework.get_meta">get_meta() (in module nbox.framework)</a>
+</li>
+        <li><a href="nbox.model.html#nbox.model.Model.get_nbox_meta">get_nbox_meta() (nbox.model.Model method)</a>
 </li>
         <li><a href="nbox.user.html#nbox.user.Secrets.get_ocd">get_ocd() (nbox.user.Secrets method)</a>
 </li>
@@ -323,15 +351,47 @@
   </tr></table>
 </section>
 
+<section id="L" class="genindex-section">
+  <h2>L</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.load.html#nbox.load.load">load() (in module nbox.load)</a>
+</li>
+        <li><a href="nbox.load.html#nbox.load.load_efficientnet_pytorch_models">load_efficientnet_pytorch_models() (in module nbox.load)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.load.html#nbox.load.load_torchvision_models">load_torchvision_models() (in module nbox.load)</a>
+</li>
+        <li><a href="nbox.load.html#nbox.load.load_transformers_models">load_transformers_models() (in module nbox.load)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="M" class="genindex-section">
   <h2>M</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.model.html#nbox.model.Model">Model (class in nbox.model)</a>
+</li>
         <li>
     module
 
         <ul>
+          <li><a href="nbox.html#module-nbox">nbox</a>
+</li>
+          <li><a href="nbox.cli.html#module-nbox.cli">nbox.cli</a>
+</li>
+          <li><a href="nbox.framework.html#module-nbox.framework">nbox.framework</a>
+</li>
           <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">nbox.framework.pytorch</a>
+</li>
+          <li><a href="nbox.framework.sklearn.html#module-nbox.framework.sklearn">nbox.framework.sklearn</a>
+</li>
+          <li><a href="nbox.load.html#module-nbox.load">nbox.load</a>
+</li>
+          <li><a href="nbox.model.html#module-nbox.model">nbox.model</a>
 </li>
           <li><a href="nbox.network.html#module-nbox.network">nbox.network</a>
 </li>
@@ -351,10 +411,54 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li>
+    nbox
+
+        <ul>
+          <li><a href="nbox.html#module-nbox">module</a>
+</li>
+        </ul></li>
+        <li>
+    nbox.cli
+
+        <ul>
+          <li><a href="nbox.cli.html#module-nbox.cli">module</a>
+</li>
+        </ul></li>
+        <li>
+    nbox.framework
+
+        <ul>
+          <li><a href="nbox.framework.html#module-nbox.framework">module</a>
+</li>
+        </ul></li>
+        <li>
     nbox.framework.pytorch
 
         <ul>
           <li><a href="nbox.framework.pytorch.html#module-nbox.framework.pytorch">module</a>
+</li>
+        </ul></li>
+        <li>
+    nbox.framework.sklearn
+
+        <ul>
+          <li><a href="nbox.framework.sklearn.html#module-nbox.framework.sklearn">module</a>
+</li>
+        </ul></li>
+        <li>
+    nbox.load
+
+        <ul>
+          <li><a href="nbox.load.html#module-nbox.load">module</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    nbox.model
+
+        <ul>
+          <li><a href="nbox.model.html#module-nbox.model">module</a>
 </li>
         </ul></li>
         <li>
@@ -371,8 +475,6 @@
           <li><a href="nbox.parsers.html#module-nbox.parsers">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     nbox.user
 
@@ -407,6 +509,8 @@
   <h2>P</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.load.html#nbox.load.plug">plug() (in module nbox.load)</a>
+</li>
         <li><a href="nbox.parsers.html#nbox.parsers.BaseParser.process_dict">process_dict() (nbox.parsers.BaseParser method)</a>
 
         <ul>
@@ -447,6 +551,8 @@
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nbox.load.html#nbox.load.remove_kwargs">remove_kwargs() (in module nbox.load)</a>
+</li>
         <li><a href="nbox.parsers.html#nbox.parsers.ImageParser.rescale">rescale() (nbox.parsers.ImageParser method)</a>
 </li>
         <li><a href="nbox.utils.html#nbox.utils.Console.rule">rule() (nbox.utils.Console method)</a>
@@ -484,6 +590,8 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nbox.parsers.html#nbox.parsers.TextParser">TextParser (class in nbox.parsers)</a>
+</li>
+        <li><a href="nbox.model.html#nbox.model.Model.train">train() (nbox.model.Model method)</a>
 </li>
     </ul></td>
   </tr></table>
